# rnn-from-scratch

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: simple_regression.py
rnn_from_scratch/: __init__.py  rnn.py
tests/: test_rnn.py
